# NDK_OpenGLES_Learn

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/lentme/learn/gles/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/lentme/learn/gles/: MainActivity.kt
app/src/main/java/cn/lentme/learn/gles/activity/: GLRenderActivity.kt  MainActivity.kt
app/src/main/java/cn/lentme/learn/gles/adapter/: GLRecyclerAdapter.kt
app/src/main/res/layout/: activity_main.xml  activity_render.xml  item_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/lentme/learn/gles/: ExampleUnitTest.kt
doc/: 001-HelloTriangle.md  002-OpenGL ES.md
doc/references/: hello_triangle.cpp
gradle/wrapper/: gradle-wrapper.properties
render/: .gitignore  build.gradle
render/src/androidTest/java/cn/lentme/gles/render/: ExampleInstrumentedTest.kt
render/src/main/assets/shader/fragment/: hello_rectangle3.glsl  hello_triangle.glsl  simple_load_model.glsl  simple_load_model2.glsl
render/src/main/assets/shader/vertex/: hello_cube.glsl  hello_cube2.glsl  hello_cube3.glsl  hello_rectangle3.glsl  hello_triangle2.glsl  simple_load_model.glsl  simple_transform.glsl
render/src/main/cpp/: CMakeLists.txt  render.cpp
render/src/main/cpp/model/: mesh.h  model.h  shader.h
render/src/main/cpp/sample/: GLBaseSample.h  GLBaseSampleInc.h  GLBaseSampleType.h
render/src/main/cpp/sample/anime/: SimpleRotate.cpp  SimpleRotate.h  SimpleScale.cpp  SimpleScale.h  SimpleTranslate.cpp  SimpleTranslate.h
render/src/main/cpp/sample/camera/: SimpleCamera.cpp  SimpleCamera.h  SimpleCamera2.cpp  SimpleCamera2.h  SimpleCamera3.cpp  SimpleCamera3.h  SimpleCamera4.cpp  SimpleCamera4.h
render/src/main/cpp/sample/hello/: HelloCube.cpp  HelloCube.h  HelloCube2.cpp  HelloCube2.h  HelloCube3.cpp  HelloCube3.h  HelloRectangle.cpp  HelloRectangle.h  HelloRectangle2.cpp  HelloRectangle2.h  HelloRectangle3.cpp  HelloRectangle3.h  HelloTriangle2.h  HelloTriangle3.cpp  HelloTriangle3.h
render/src/main/cpp/sample/model/: SimpleLoadModel.cpp  SimpleLoadModel.h  SimpleLoadModel2.cpp  SimpleLoadModel2.h
render/src/main/cpp/sample/triangle/: HelloTriangle.cpp  HelloTriangle.h  HelloTriangle2.cpp  HelloTriangle2.h
render/src/main/cpp/utils/: GLUtils.cpp  GLUtils.h
render/src/main/java/cn/lentme/gles/render/: CommonUtils.kt  GLBaseSampleType.kt  MyNativeRender.kt  Utils.kt
render/src/main/java/cn/lentme/gles/render/ui/: MyGLSurfaceView.kt  RockerView.kt
render/src/main/java/cn/lentme/gles/render/util/: CommonUtils.kt  Utils.kt
render/src/test/java/cn/lentme/gles/render/: ExampleUnitTest.kt
